force-app/main/default/objects/Merchant_Facility__x/Merchant_Facility__x.object-meta.xml
<CustomObject>
    <externalDataSource>Core_Banking_Data_Source</externalDataSource>
    <externalName>MerchantFacility</externalName>
    <label>Merchant Facility</label>
    <pluralLabel>Merchant Facilities</pluralLabel>
</CustomObject>