force-app/main/default/objects/Merchant_Facility__x/fields/CAP_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>CAP_Customer_ID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>CAP Customer Unique ID</description>
    <externalDeveloperName>CAPCustomerID</externalDeveloperName>
    <label>CAP Customer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>