force-app/main/default/objects/Merchant_Facility__x/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Caps</complianceGroup>
    <description>Customer link</description>
    <externalDeveloperName>CustomerId</externalDeveloperName>
    <label>Customer</label>
    <length>255</length>
    <referenceTargetField>Account.External_Id__c</referenceTargetField>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Merchant Facilities</relationshipLabel>
    <relationshipName>Merchant_Facilities</relationshipName>
    <type>IndirectLookup</type>
</CustomField>