force-app/main/default/objects/Merchant_Facility__x/fields/Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Name__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Legal name of Business</description>
    <externalDeveloperName>LegalName</externalDeveloperName>
    <label>Legal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>