force-app/main/default/objects/Merchant_Facility__x/fields/Merchant_ID__c.field-meta.xml
<CustomField>
    <fullName>Merchant_ID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Merchant Id</description>
    <externalDeveloperName>MerchantID</externalDeveloperName>
    <label>Merchant ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>