force-app/main/default/objects/Merchant_Facility__x/fields/No_of_Terminals__c.field-meta.xml
<CustomField>
    <fullName>No_of_Terminals__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>No of merchant terminals</description>
    <externalDeveloperName>NoOfTerminals</externalDeveloperName>
    <label>Number of Terminals</label>
    <length>255</length>
    <type>Text</type>
</CustomField>