force-app/main/default/objects/Merchant_Facility__x/fields/Trading_Name__c.field-meta.xml
<CustomField>
    <fullName>Trading_Name__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAPS</complianceGroup>
    <description>Business trading name</description>
    <externalDeveloperName>TradingName</externalDeveloperName>
    <label>Trading Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>