force-app/main/default/objects/Merchant_Facility__x/fields/Turnover_Amount_Last_3_Months__c.field-meta.xml
<CustomField>
    <fullName>Turnover_Amount_Last_3_Months__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>The amount turned over using the merchant facility in the last 3 months</description>
    <externalDeveloperName>TurnoverAmountLast3Months</externalDeveloperName>
    <label>Turnover Amount (Last 3 Months) ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>